# hermes-team

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dashboard.rs  lib.rs  main.rs
src/core/: artifacts.ts  attachments.ts  collaboration-budget.ts  handoff.ts  mention-parser.ts  orchestrator.ts  parallel-batch-tracker.ts  reasoning.ts  seed.ts  serial-chain-tracker.ts  types.ts  workMode.ts
src/i18n/: I18nProvider.tsx  index.ts  resources.ts  types.ts
src/renderer/: AgentMarkdown.tsx  App.tsx  ArtifactPanel.tsx  BubbleContextMenu.tsx  ChatControls.tsx  ChatView.tsx  ClarifyCard.tsx  DestructiveConfirmModal.tsx  DiscoverView.tsx  FileViewer.tsx  KanbanView.tsx  MessageRow.tsx  MessagingPlatformCard.tsx  MultiAgentView.tsx  OfficeScene.tsx  OfficeView.tsx  OnboardingFlow.tsx  ProfileAvatar.tsx  ProfileDetailModal.tsx  ReasoningEffortPicker.tsx  SessionMoveMenu.tsx  SessionsView.tsx  SidebarRecentSessions.tsx  SidebarSessionMenu.tsx  UpdateDialog.tsx  WalletPane.tsx  WebPreviewPanel.tsx  (+32 more)
tests/: artifactState.test.ts  chat-run-context.test.ts  chat-run-lifecycle.test.ts  chat-run-results.test.ts  chat-runtime-controller.test.ts  chat-stream-events.test.ts  chat-stream-state.test.ts  chat-transcript.test.ts  gateway-actions.test.ts  i18n.test.ts  orchestration.test.ts  profile-actions.test.ts  profile-runtime.test.ts  session-actions.test.ts  session-lifecycle.test.ts  web-preview-inspector.test.ts  workMode.test.ts
(+8 files in other folders)
