[package]
name = "hermes-team"
version = "0.1.0"
description = "Hermes Team desktop shell"
authors = ["Hermes Team"]
edition = "2021"

[lib]
name = "hermes_team_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
