[package]
name = "hermes-team"
version = "0.1.0"
description = "Hermes Team desktop shell"
authors = ["Hermes Team"]
edition = "2021"

[lib]
name = "hermes_team_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
bip39 = { version = "2", features = ["rand"] }
bip32 = { version = "0.5", default-features = false, features = ["alloc", "secp256k1"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
sha2 = "0.10"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
aes-gcm = "0.10"
rand = "0.8"
